--- a/7- Four Card feature section master/style.css
+++ b/7- Four Card feature section master/style.css
@@ -83,4 +83,45 @@ p {
 .card__c {
   border-color: #549ef2;
 }
+
+@media (min-width: 800px) {
+  body {
+    padding: 2em 10rem;
+  }
+  h2 {
+    font-size: 2.5rem;
+  }
+  p {
+    font-size: 1.4rem;
+    margin-right: 12rem;
+    margin-left: 12rem;
+  }
+  .cards {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+            flex-direction: row;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
+  }
+  .card {
+    margin: 0  1rem;
+    max-height: 100%;
+    width: 24rem;
+  }
+  .card img {
+    width: 4em;
+    margin-bottom: 2rem;
+  }
+  .vertical .card__k {
+    margin: 2rem 1rem 0 1rem;
+  }
+}
 /*# sourceMappingURL=style.css.map */
