--- a/7- Four Card feature section master/style.sass
+++ b/7- Four Card feature section master/style.sass
@@ -79,7 +79,41 @@ p
 
     &__c
         border-color: $blue
-        
+
+// desktop
+
+@media  ( min-width: 800px )
+
+    body
+        padding: 2em 10rem
+
+    h2
+        font-size: 2.5rem
+
+    p
+        font-size: 1.4rem
+        margin-right: 12rem
+        margin-left: 12rem
+
+    .cards
+        display: flex
+        flex-direction: row
+        align-items: center
+        justify-content: space-between
+
+    .card
+        margin: 0  1rem
+        max-height: 100%   
+        width: 24rem
+
+        & img
+            width: 4em
+            margin-bottom: 2rem
+
+
+
+    .vertical .card__k
+        margin: 2rem 1rem 0 1rem
 
 
 
